corpus/comments.txt
===
Comments parsed correctly
===

-- this shouldn't be parsed
-- def i = b
def a = c -- this shouldn't be parsed either

---

(source_file
  (comment)
  (comment)
  (val_bind
    bindto: (name)
    val: (name))
  (comment))

===
Comments allowed in expressions
===

def a = x + -- a comment
y

---

(source_file
  (val_bind
    bindto: (name)
    val: (binary
           lhs: (name)
           op: (qualsymbol)
           (comment)
           rhs: (name))))
