corpus/expressions.txt
===
addition is left associative
===

def a = x - y - z

---

(source_file
  (val_bind
    bindto: (name)
    val: (binary
      lhs: (binary
             lhs: (name)
             op: (symbol)
             rhs: (name))
      op: (symbol)
      rhs: (name))))

===
multiplication is left associative
===

def a = x * y * z

---

(source_file
  (val_bind
    bindto: (name)
    val: (binary
      lhs: (binary
             lhs: (name)
             op: (symbol)
             rhs: (name))
      op: (symbol)
      rhs: (name))))

===
multiplication has higher precedence that addition
===

def a = x + y * z

---

(source_file
  (val_bind
    bindto: (name)
    val: (binary
           lhs: (name)
           op: (symbol)
           rhs: (binary
                  lhs: (name)
                  op: (symbol)
                  rhs: (name)))))


===
parens work
===

def a = (x + y) * z

---

(source_file
  (val_bind
    bindto: (name)
    val: (binary
      lhs: (binary
             lhs: (name)
             op: (symbol)
             rhs: (name))
      op: (symbol)
      rhs: (name))))

===
function applys work as expected
===

def a = x y z

---

(source_file
  (val_bind
    bindto: (name)
    val: (apply
           func: (name)
           args: (name)
           args: (name))))

===
function applys have higher precedence than multiplication
===

def a = x y * z w

---

(source_file
  (val_bind
    bindto: (name)
    val: (binary
           lhs: (apply
                  func: (name)
                  args: (name))
           op: (symbol)
           rhs: (apply
                  func: (name)
                  args: (name)))))

===
apply and neg don't break subtraction
===

def a = x -y

---

(source_file
  (val_bind
    bindto: (name)
    val: (binary
           lhs: (name)
           op: (symbol)
           rhs: (name))))

===
neg binds after apply
===

def a = - x y

---

(source_file
  (val_bind
    bindto: (name)
    val: (neg
           negated: (apply
                      func: (name)
                      args: (name)))))

===
neg binds before mul
===

def a = -x * y

(source_file
  (val_bind
    bindto: (name)
    val: (neg
           negated: (binary
                      lhs: (name)
                      op: (symbol)
                      rhs: (name)))))
